Fix up style for readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ body {
 }
 
 #make {
-    font-weight: 700;
+    font-weight: 500;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
